tests/toy/neg/000476_mutation.toylang
program a = { a = bool a); } .
